--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* ===== CUSTOM SCROLL BAR =====*/
+body::-webkit-scrollbar{
+  width: 10px !important; 
+  background-color:  #F9FAFB !important;
+  
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: rgba(32, 101, 209, 0.2) !important;
+  border-radius: 10px !important;
+}
+
+body::-webkit-scrollbar-thumb:hover{
+  background-color: rgba(32, 101, 209, 0.2) !important;
+}
+
+body::-webkit-scrollbar-thumb:active{
+  background-color: rgba(32, 101, 209, 0.2) !important;
+}
