arreglo filtro de busqueda

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,13 @@ body::-webkit-scrollbar-thumb:hover{
 body::-webkit-scrollbar-thumb:active{
   background-color: rgba(82, 79, 79, 0.2) !important;
 }
+
+/* Cambiar el color del borde de un TextField cuando está enfocado */
+.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: #2065D1 !important; /* Cambia el color del borde a púrpura */
+}
+
+.Mui-focused {
+  color: black !important; /* Cambia el color de enfoque a púrpura */
+}
+
